tests/ui/auto-traits/auto-trait-validation.stderr
error[E0567]: auto traits cannot have generic parameters
  --> $DIR/auto-trait-validation.rs:6:19
   |
LL | auto trait Generic<T> {}
   |            -------^^^
   |            |
   |            auto trait cannot have generic parameters
   |
help: remove the parameters
   |
LL - auto trait Generic<T> {}
LL + auto trait Generic {}
   |

error[E0568]: auto traits cannot have super traits or lifetime bounds
  --> $DIR/auto-trait-validation.rs:8:17
   |
LL | auto trait Bound : Copy {}
   |            -----^^^^^^^
   |            |
   |            auto traits cannot have super traits or lifetime bounds
   |
help: remove the super traits or lifetime bounds
   |
LL - auto trait Bound : Copy {}
LL + auto trait Bound {}
   |

error[E0568]: auto traits cannot have super traits or lifetime bounds
  --> $DIR/auto-trait-validation.rs:10:25
   |
LL | auto trait LifetimeBound : 'static {}
   |            -------------^^^^^^^^^^
   |            |
   |            auto traits cannot have super traits or lifetime bounds
   |
help: remove the super traits or lifetime bounds
   |
LL - auto trait LifetimeBound : 'static {}
LL + auto trait LifetimeBound {}
   |

error[E0380]: auto traits cannot have associated items
  --> $DIR/auto-trait-validation.rs:12:25
   |
LL | auto trait MyTrait { fn foo() {} }
   |            -------      ^^^
   |            |
   |            auto traits cannot have associated items
   |
help: remove these associated items
   |
LL - auto trait MyTrait { fn foo() {} }
LL + auto trait MyTrait {  }
   |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0380, E0567, E0568.
For more information about an error, try `rustc --explain E0380`.
